--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
   body { margin:2em; }
   p { vertical-align:middle; }
   .earea:focus { background-color:white; }
-  input[type=text] { height:auto; width:30em; color:gray; display:block; }
-  
-  div.progressbar {display:none;height:3px;background:#C4C4C4;padding:0px;}
-  div.progressbar .scrollbar{display:block;width:50%;height:3px;background:red;}
 </style>
 </head>
 <body>
@@ -20,7 +16,7 @@
 
 
 <div class="jumbotron">
-  <h1><i class="fa fa-fire-extinguisher"></i> eArea</h1>
+  <h1><i class="fa fa-fire-extinguisher"></i> eareas</h1>
   <p class="marketing-byline">Simple ultralightweight unobtrusive bootstrap fontAwesome HTML5 WYSIWYG editor</p>
 </div>
 <div>  
@@ -30,9 +26,9 @@
       <a href="http://hackerwins.github.io/summernote/">Summernote</a> and 
       <a href="http://dwij.co.in/text-editor-with-ajax-image-uploader/">WysiwygImageUpload</a>
    </p>
-   <p> Format toolbox will appear at the bottom edge of the page, there is only one for all eAreas<br />
-       eArea will initialize only when focused one of the areas, so you can put many eAreas without hogging your browser<br />
-       eAreas will copy its content to the previous hidden input
+   <p> Format toolbox will appear at the bottom edge of the page, there is only one for all eareas<br />
+       <b>earea</b> will initialize only when focused one of the areas, so you can put many eareas without hogging your browser<br />
+       <b>eareas</b> will copy its content to the previous hidden input
    </p>
 </div>
 <div>
